# claude_code_project_template

./: .gitignore  CLAUDE.md  PROJECT_SCOPE.md  README.md  RESOURCE.md  claude_skills_list.md  next_steps.md  pyproject.toml
.claude/: save_session.sh
.claude/agents/: jarvis.md
.claude/commands/: hey-jarvis.md  remindme.md
.claude/skills/memory-update/: SKILL.md
planning/: PLAN.md  changelog.md  cost_log.md  execution.md  explanation.md  raid.md
tools/: jarvis_doc_writer.py  sheets_writer.py
